--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/jest-dom": "5.1.1",
+    "@testing-library/react": "9.4.0",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "antd": "3.26.8",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
     "mobx": "5.15.4",
     "mobx-react-lite": "1.5.2",
     "react": "^16.12.0",
@@ -39,5 +41,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "devDependencies": {
+    "jsdom": "16.2.0",
+    "jsdom-global": "3.0.2"
+  }
 }
