--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "antd": "3.26.8",
+    "bootstrap": "4.4.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "mobx": "5.15.4",
     "mobx-react-lite": "1.5.2",
+    "puppeteer": "2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
